# baa2sf2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: Adsr.cpp  Adsr.hpp  AfcDecoder.cpp  AfcDecoder.hpp  AudioArchive.hpp  AudioArchiveLoader.cpp  AudioArchiveLoader.hpp  BaaConverter.cpp  BaaConverter.hpp  BasicInstrument.cpp  BasicInstrument.hpp  BnkParser.cpp  BnkParser.hpp  Envelope.hpp  Instrument.hpp  InstrumentBank.cpp  InstrumentBank.hpp  Oscillator.hpp  PercussionSet.cpp  PercussionSet.hpp  UnitConversions.hpp  WaveBank.cpp  WaveBank.hpp  WaveGroup.cpp  WaveGroup.hpp  WaveHandle.cpp  WaveHandle.hpp  WaveInfo.hpp  WavePool.cpp  WavePool.hpp  WsysParser.cpp  WsysParser.hpp  main.cpp  types.hpp  utils.cpp  utils.hpp
